# webinar-cicd

./: .gitignore  CMakeLists.txt  main.cpp  test_version.cpp
